[package]
name = "universal-data-source"
authors = ["Hubert Pawlak <hubertpawlak.dev>"]
description = "Universal data provider for home-panel and possibly any HTTP endpoint"
readme = "README.md"
repository = "https://github.com/hubertpawlak/universal-data-source"
license = "OSL-3.0"
publish = false
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["blocking", "json", "native-tls-vendored"] }
rups = { version = "0.5.3", features = ["ssl"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
tempfile = "3.5.0"
