[package]
name = "universal-data-source"
authors = ["Hubert Pawlak <hubertpawlak.dev>"]
description = "Universal data provider for home-panel and possibly any HTTP endpoint"
readme = "README.md"
repository = "https://github.com/hubertpawlak/universal-data-source"
license = "OSL-3.0"
publish = false
version = "2.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
mockall_double = "0.3.0"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["blocking", "json", "native-tls-vendored"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rups = { version = "0.6.0", features = ["async-ssl"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[patch.crates-io]
rups = { git = "https://github.com/hubertpawlak/nut-rs.git", branch = "fix-panic-on-lost-connection" }

[dev-dependencies]
mockall = "0.11.4"
mockito = "1.0.2"
tempfile = "3.5.0"
